@@ -1,13 +1,18 @@
-cmake/cppp.cmake
-cmake/file.cmake
-cmake/library.cmake
-cmake/uninstall.cmake.in
-cmake/visibility.cmake
-cmake/cppp_init.cmake
 README.md
-COPYING
+FILELIST
+modules/nls-util.cmake
 cpppdist.py
 CMakeLists.txt
 CPPPPKG
-FILELIST
+nls-util/src/langmap.hpp
+nls-util/src/nls-util.cpp
+nls-util/CMakeLists.txt
+cmake/cppp.cmake
+cmake/file.cmake
+cmake/modules.cmake
+cmake/uninstall.cmake.in
+cmake/visibility.cmake
+cmake/cppp_init.cmake
+cmake/library.cmake
 ChangeLog
+COPYING
