@@ -1,3 +1,8 @@
+2023-07-25	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>
+
+	Add NLS Util.
+	Add C++ Plus CMake modules linker.
+
 2023-07-21	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>
 
 	Fix ChangeLog datetime format.
